--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
 
 	<groupId>guru.springframework</groupId>
 	<artifactId>sfg-pet-clinic</artifactId>
-	<version>0.0.4-SNAPSHOT</version>
+	<version>0.0.4</version>
 	<packaging>pom</packaging>
 
 	<name>sfg-pet-clinic</name>
@@ -47,7 +47,7 @@
 	</build>
 	<scm>
 		<developerConnection>scm:git:git@github.com:pmccamish1/sfg-pet-clinic.git</developerConnection>
-	  <tag>HEAD</tag>
+	  <tag>sfg-pet-clinic-0.0.4</tag>
   </scm>
 
 </project>
